--- a/.env
+++ b/.env
@@ -10,3 +10,4 @@ VERTEX_AI_DATA_STORE_ID=tachrone-data_1754422803552
 VERTEX_AI_LOCATION_ID=global
 # Configuration du serveur (optionnel)
 PORT=3000
+DATA_STORE_ID=projects/airy-shuttle-468014-n1/locations/eu/collections/default_collection/dataStores/tachrone_1754589027742
