--- a/.env
+++ b/.env
@@ -1,13 +1,13 @@
-GOOGLE_API_KEY=AIzaSyDqhIk1zIx6zLR8JM1j5xqikcXVlBMGE90
+GOOGLE_API_KEY=
 # Configuration d'environnement pour le projet ADK
 # Copiez ce fichier vers .env et remplissez avec vos vraies valeurs
 # Configuration Google Cloud
-GOOGLE_CLOUD_PROJECT_ID=airy-shuttle-468014-n1
-GOOGLE_CLOUD_LOCATION=europe-west1
+GOOGLE_CLOUD_PROJECT_ID=
+GOOGLE_CLOUD_LOCATION=
 GOOGLE_GENAI_USE_VERTEXAI=true
 # Configuration Vertex AI Search
-VERTEX_AI_DATA_STORE_ID=tachrone-data_1754422803552
-VERTEX_AI_LOCATION_ID=global
+VERTEX_AI_DATA_STORE_ID=
+VERTEX_AI_LOCATION_ID=
 # Configuration du serveur (optionnel)
 PORT=3000
-DATA_STORE_ID=projects/airy-shuttle-468014-n1/locations/eu/collections/default_collection/dataStores/tachrone_1754589027742
+DATA_STORE_ID=
